# MiroFish-Tauri2

./: .gitignore
.github/workflows/: build-macos.yml
MiroFish/: .env.example
MiroFish/backend/scripts/: patch_camel_schema.py  run_parallel_simulation.py  run_reddit_simulation.py  run_twitter_simulation.py
MiroFish/demo_docs/: digital_twin_palantir_challenger.txt
MiroFish/frontend/: vite.config.js
MiroFish/frontend/src/: App.vue
MiroFish/seed_documents/: Palantir Artificial Intelligence Platform.html  digital_twin_palantir_market_research.txt  market_intelligence_2025.txt
MiroFish/seed_documents/Palantir Artificial Intelligence Platform_files/: 0e50ab69b861606d.css  200-775b1cd1f4dcd6fc.js  3463-aa1601d08aee85d2.js  3481-976ab89a1be3269a.js  4434-84bbcdd0395000f9.js  4873-ed15c109b2462476.js  5455-e55929104013e0e0.js  56-082e4a819dc3f0e4.js  5672-3794b573013d2a08.js  6069-f63283d85a3f76b2.js  68eefe8d92e4a1c2.css  9196-21286fd81dcaf91a.js  [...slug]-9da31d6fcbda8063.js  _app-7af8e386fa3d01e6.js  _buildManifest.js  _ssgManifest.js  aip-574c8e0ba77188d4.js  b6309492eea3e6ae.css  ca159e288e433ab9.css  e69dd5a6-51c86e47046ef005.js  eea07c1dad90f887.css  f.txt  gotham-72bb90fff1a97864.js  gtm.js  js  (+3 more)
mirofish-tauri/: .gitignore  README.md  mirofish_server.spec  package.json
mirofish-tauri/frontend/: index.html  package.json  vite.config.js
mirofish-tauri/src-tauri/: Cargo.toml  tauri.conf.json
mirofish-tauri/src-tauri/capabilities/: default.json
mirofish-tauri/src-tauri/icons/: icon.icns
mirofish-tauri/src-tauri/src/: lib.rs  main.rs
(+17 files in other folders)
